force-app/main/default/objects/Quote/fields/Temperatura__c.field-meta.xml
<CustomField>
    <fullName>Temperatura__c</fullName>
    <label>Temperatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
                <label>Caliente</label>
            </value>
            <value>
                <fullName>Warm</fullName>
                <label>Tibio</label>
            </value>
            <value>
                <fullName>Cold</fullName>
                <label>Frío</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>