force-app/main/default/objects/Quote/fields/Tiempo_q_tuvo_moto_ant__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_q_tuvo_moto_ant__c</fullName>
    <label>Tiempo que tuvo la motocicleta anterior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 1 año</fullName>
            </value>
            <value>
                <fullName>1-2 años</fullName>
            </value>
            <value>
                <fullName>2-5 años</fullName>
            </value>
            <value>
                <fullName>&gt; 5 años</fullName>
            </value>
            <value>
                <fullName>Ninguna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>