force-app/main/default/objects/Quote/fields/Tipo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pago__c</fullName>
    <label>Tipo de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>101</fullName>
                <label>101 - Contado</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>102 - Crédito Progreser</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>103 - Cartera Propia</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>104 - Negocios Especiales</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>105 - Otras Financieras</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>107 - E-commerce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>