force-app/main/default/objects/Quote/fields/Total_a_Pagar__c.field-meta.xml
<CustomField>
    <fullName>Total_a_Pagar__c</fullName>
    <label>Total a Pagar</label>
    <summarizedField>QuoteLineItem.Total_a_Pagar__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>