force-app/main/default/objects/Quote/fields/UltiFecVisuaCoti__c.field-meta.xml
<CustomField>
    <fullName>UltiFecVisuaCoti__c</fullName>
    <label>Última Fecha Visualización Cotización</label>
    <type>DateTime</type>
</CustomField>