force-app/main/default/objects/Quote/fields/Unidades__c.field-meta.xml
<CustomField>
    <fullName>Unidades__c</fullName>
    <label>Unidades</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>