force-app/main/default/objects/Quote/fields/uso_Principal_Moto__c.field-meta.xml
<CustomField>
    <fullName>uso_Principal_Moto__c</fullName>
    <label>¿Qué uso principal planea dar a la moto?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trabajo (Generación de ingresos)</fullName>
            </value>
            <value>
                <fullName>Recreación</fullName>
            </value>
            <value>
                <fullName>Transporte Personal</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
                <isActive>false</isActive>
                <label>Transporte</label>
            </value>
            <value>
                <fullName>Transporte Familiar</fullName>
                <isActive>false</isActive>
                <label>Transporte Familiar</label>
            </value>
            <value>
                <fullName>Transporte Pasajeros</fullName>
                <isActive>false</isActive>
                <label>Transporte Pasajeros</label>
            </value>
            <value>
                <fullName>Transporte de Carga</fullName>
                <isActive>false</isActive>
                <label>Transporte de Carga</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>