force-app/main/default/objects/Quote/fields/Valor_a_financiar__c.field-meta.xml
<CustomField>
    <fullName>Valor_a_financiar__c</fullName>
    <label>Valor a financiar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>