force-app/main/default/objects/Quote/fields/Valor_Vehiculo_Renting__c.field-meta.xml
<CustomField>
    <fullName>Valor_Vehiculo_Renting__c</fullName>
    <label>Valor Vehículo</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>