force-app/main/default/objects/Quote/fields/Vitrina__c.field-meta.xml
<CustomField>
    <fullName>Vitrina__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vitrina</label>
    <referenceTo>Concesionario__c</referenceTo>
    <relationshipLabel>Cotizaciones. (Vitrina)</relationshipLabel>
    <relationshipName>Cotizaciones1</relationshipName>
    <type>Lookup</type>
</CustomField>