force-app/main/default/objects/Quote/recordTypes/Cotizaciones_Autos.recordType-meta.xml
<RecordType>
    <fullName>Cotizaciones_Autos</fullName>
    <active>true</active>
    <label>Cotizaciones Autos</label>
</RecordType>