force-app/main/default/objects/Quote/recordTypes/Cotizaciones_Motos.recordType-meta.xml
<RecordType>
    <fullName>Cotizaciones_Motos</fullName>
    <active>true</active>
    <label>Cotizaciones Motos</label>
</RecordType>