force-app/main/default/objects/Quote/validationRules/Maximo_agregar_dos_productos.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximo_agregar_dos_productos</fullName>
    <active>true</active>
    <errorConditionFormula>LineItemCount &gt; 2</errorConditionFormula>
    <errorMessage>Solamente se permite agregar hasta 2 productos por cotización.</errorMessage>
</ValidationRule>