force-app/main/default/objects/Quote/validationRules/Not_Allow_Sync_if_doesnt_have_products.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Allow_Sync_if_doesnt_have_products</fullName>
    <active>true</active>
    <errorConditionFormula>IsSyncing == true &amp;&amp;  ISCHANGED(IsSyncing ) &amp;&amp;  LineItemCount == 0</errorConditionFormula>
    <errorMessage>No puede sincronizar una cotización sin productos</errorMessage>
</ValidationRule>