force-app/main/default/objects/Quote/validationRules/OppContactFilledInOppAccountJuridica.validationRule-meta.xml
<ValidationRule>
    <fullName>OppContactFilledInOppAccountJuridica</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity.RecordType.Name ==&apos;Oportunidad Autos&apos; &amp;&amp; !Opportunity.Account.IsPersonAccount &amp;&amp; Opportunity.Contacto__c == null</errorConditionFormula>
    <errorMessage>El Contacto en la Oportunidad debe ser ingresado antes de crear una nueva Cotización!</errorMessage>
</ValidationRule>