force-app/main/default/objects/Quote/validationRules/Valida_cambios_sincronizada.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_cambios_sincronizada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   RecordType.Name =&quot;Cotizaciones Motos&quot; , NOT(ISNEW()),  IsSyncing = TRUE, PRIORVALUE(IsSyncing),  $User.LastName&lt;&gt;&quot;Integraciones&quot; )</errorConditionFormula>
    <errorMessage>No puede alterar la cotización mientras esté sincronizada, por favor des-sincronice la cotización y vuelva a intentar.</errorMessage>
</ValidationRule>