force-app/main/default/objects/Quote/validationRules/Valida_Contacto_Juridico_HabeasData.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Contacto_Juridico_HabeasData</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Opportunity.Contacto__c &lt;&gt; null,    ISBLANK(Opportunity.Contacto__r.Datos_Autorizacion_Web__c) )</errorConditionFormula>
    <errorMessage>Al contacto de la oportunidad le hace falta la autorización de Habeas Data.</errorMessage>
</ValidationRule>