force-app/main/default/objects/Quote/validationRules/Valida_Convenio_Descuento.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Convenio_Descuento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( TEXT(Opportunity.Convenio__c) ), Discount &gt;0)</errorConditionFormula>
    <errorMessage>No puede dar un descuento sin indicar qué tipo de convenio usa la oportunidad.</errorMessage>
</ValidationRule>