force-app/main/default/objects/Quote/validationRules/Valida_Desincronizacion_PU_UNOEE.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Desincronizacion_PU_UNOEE</fullName>
    <active>true</active>
    <description>Valida que no se pueda desincronizar una cotización cuando se envió el pedido a UNOEE o ya la oppty está en PU</description>
    <errorConditionFormula>AND( IsSyncing =false,  PRIORVALUE(IsSyncing)=true ,OR( Opportunity.Se_creo_pedido_en_UNOEE__c = true, TEXT( Opportunity.StageName )=&quot;PU&quot;))</errorConditionFormula>
    <errorMessage>No se puede desincronizar una cotización cuando se envió el pedido a UNOEE o ya la oportunidad está en PU</errorMessage>
</ValidationRule>