force-app/main/default/objects/Quote/validationRules/Valida_estado_aceptado.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_estado_aceptado</fullName>
    <active>true</active>
    <description>No se debe sincronizar una cotización que no ha sido aceptada.</description>
    <errorConditionFormula>AND(TEXT( Status )&lt;&gt;&quot;Cotización aceptada&quot;, CONTAINS(RecordType.Name, &quot;Motos&quot;),  IsSyncing = TRUE, $User.LastName&lt;&gt;&quot;Integraciones&quot; )</errorConditionFormula>
    <errorMessage>No se debe sincronizar una cotización que no ha sido aceptada.</errorMessage>
</ValidationRule>