force-app/main/default/objects/Quote/validationRules/Valida_fecha_de_validez.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_fecha_de_validez</fullName>
    <active>true</active>
    <description>Impide marcar una fecha de validez menor a hoy</description>
    <errorConditionFormula>/*
AND(Fecha_de_validez__c  &lt; TODAY(),$User.LastName&lt;&gt;&quot;Integraciones&quot; )
*/

AND(Fecha_de_validez__c  &lt; TODAY(), ! ($User.LastName=&quot;Integraciones&quot; || $Profile.Name =&apos;PT1&apos; || $Profile.Name =&apos;Administrador del sistema&apos; || $Profile.Name =&apos;System Administrator&apos;)
)</errorConditionFormula>
    <errorMessage>No se puede indicar un valor de fecha de validez menor a hoy</errorMessage>
</ValidationRule>