force-app/main/default/objects/Quote/listViews/X_Temperatura.listView-meta.xml
<ListView>
    <fullName>X_Temperatura</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Temperatura__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Temperatura__c</field>
        <operation>equals</operation>
        <value>Hot</value>
    </filters>
    <label>X Temperatura</label>
</ListView>